force-app/main/default/objects/NCMT_LPOE_Parametric_Cost_Data__c/NCMT_LPOE_Parametric_Cost_Data__c.object-meta.xml
<CustomObject>
    <description>LPOE Parametric Cost Data</description>
    <label>LPOE Parametric Cost Data</label>
    <nameField>
        <displayFormat>LPOE-SD-{0000}</displayFormat>
        <label>LPOE Parametric Cost Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LPOE Parametric Cost Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>