force-app/main/default/objects/NCMT_LPOE_Parametric_Cost_Data__c/fields/Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category__c</fullName>
    <label>Cost Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Building</fullName>
            </value>
            <value>
                <fullName>Inbound Auto Inspection Building</fullName>
            </value>
            <value>
                <fullName>Repatriation Facility</fullName>
            </value>
            <value>
                <fullName>Outbound Auto Inspection Building</fullName>
            </value>
            <value>
                <fullName>Commercial Plant Inspection Building</fullName>
            </value>
            <value>
                <fullName>Veterinary Building</fullName>
            </value>
            <value>
                <fullName>Commercial FMCSA Building</fullName>
            </value>
            <value>
                <fullName>POV Inbound Bypass Lane Canopy</fullName>
            </value>
            <value>
                <fullName>POV Outbound Bypass Lane Canopy</fullName>
            </value>
            <value>
                <fullName>POV Inbound Booth/Canopy</fullName>
            </value>
            <value>
                <fullName>POV Outbound Booth/Canopy</fullName>
            </value>
            <value>
                <fullName>POV Secondary Inspection Canopy</fullName>
            </value>
            <value>
                <fullName>POV Inbound Exit Booth/Canopy</fullName>
            </value>
            <value>
                <fullName>POV Outbound Exit Booth/Canopy</fullName>
            </value>
            <value>
                <fullName>POV Sentri Inspection Lane</fullName>
            </value>
            <value>
                <fullName>Large POV Inbound Booth/Canopy</fullName>
            </value>
            <value>
                <fullName>Large POV Outbound Booth/Canopy</fullName>
            </value>
            <value>
                <fullName>Bus Drop Off Canopy</fullName>
            </value>
            <value>
                <fullName>Commercial Inbound Bypass Lane Canopy</fullName>
            </value>
            <value>
                <fullName>Commercial Outbound Bypass Lane Canopy</fullName>
            </value>
            <value>
                <fullName>Commercial Inbound Inspection Lane Canopy</fullName>
            </value>
            <value>
                <fullName>Commercial Outbound Inspection Lane Canopy</fullName>
            </value>
            <value>
                <fullName>Large Commercial Inbound Inspection Lane Canopy</fullName>
            </value>
            <value>
                <fullName>Large Commercial Outbound Inspection Lane Canopy</fullName>
            </value>
            <value>
                <fullName>Commerical Inbound Non-Laden Inspection Canopy</fullName>
            </value>
            <value>
                <fullName>Commerical Outbound Non-Laden Inspection Canopy</fullName>
            </value>
            <value>
                <fullName>Commercial Inbound Truck Scale Canopy</fullName>
            </value>
            <value>
                <fullName>Commercial Outbound Truck Scale Canopy</fullName>
            </value>
            <value>
                <fullName>Commercial Inbound Exit Booth</fullName>
            </value>
            <value>
                <fullName>Commercial Outbound Exit Booth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>