force-app/main/default/objects/NCMT_LPOE_Parametric_Cost_Data__c/fields/Port_Size__c.field-meta.xml
<CustomField>
    <fullName>Port_Size__c</fullName>
    <label>Port Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mega</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>