force-app/main/default/objects/NCMT_LPOE_Parametric_Cost_Data__c/fields/POV_Commercial_Type__c.field-meta.xml
<CustomField>
    <fullName>POV_Commercial_Type__c</fullName>
    <label>POV/Commercial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POV</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>