force-app/main/default/objects/NCMT_LPOE_Parametric_Cost_Data__c/fields/Site_Related__c.field-meta.xml
<CustomField>
    <fullName>Site_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Related</label>
    <type>Checkbox</type>
</CustomField>