force-app/main/default/objects/NCMT_LPOE_Parametric_Cost_Data__c/fields/TI_Cost__c.field-meta.xml
<CustomField>
    <fullName>TI_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TI Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>