force-app/main/default/objects/NCMT_LPOE_Parametric_Cost_Data__c/fields/TI_Percentage__c.field-meta.xml
<CustomField>
    <fullName>TI_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TI Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>