force-app/main/default/objects/NCMT_LPOE_Parametric_Cost_Data__c/listViews/FY_2018.listView-meta.xml
<ListView>
    <fullName>FY_2018</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Building_Group__c</columns>
    <columns>POV_Commercial_Type__c</columns>
    <columns>Site_Related__c</columns>
    <columns>Cost_Category__c</columns>
    <columns>Border_Type__c</columns>
    <columns>Port_Size__c</columns>
    <columns>Core_Shell_Cost__c</columns>
    <columns>TI_Cost__c</columns>
    <columns>Security_Cost__c</columns>
    <columns>TI_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>FY-2018</label>
</ListView>